# pipelined

./: .editorconfig  .gitignore  pyproject.toml  setup.cfg
examples/: proxy_object.py  simple.py
pipelined/: __init__.py  aggregate.py  generators.py  transform.py  utils.py
pipelined/core/: __init__.py  functors.py  proxy_object.py
pipelined/shortcuts/: __init__.py  math.py
