[tool.poetry]
name = "pipelined"
version = "0.1.0"
description = "Declarative programming with blackjack and hookers"
authors = ["Artem <burenotti@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
mypy = "^0.931"
build = "^0.7.0"
twine = "^3.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
